--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
+  <div class="header">
+    <nav>
+      <ul class="nav nav-pills pull-right">
+        <li role="presentation"><a href="#">Sign Up</a></li>
+        <li role="presentation"><a href="#">Log In</a></li>
+      </ul>
+    </nav>
+    <h3 class="text-muted">Rails 101</h3>
+  </div>
 
-<%= yield %>
+  <div class="row">
+    <%= yield %>
+  </div>
+
+  <footer class="footer">
+    <p>&copy; Bernie Chiu 2014</p>
+  </footer>
+</div>
 
 </body>
 </html>
