--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rails101</title>
+  <title>RAILS 101</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,15 +11,18 @@
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
-        <li role="presentation"><a href="#">Sign Up</a></li>
-        <li role="presentation"><a href="#">Log In</a></li>
+        <li><%= link_to("Home", root_path) %></li>
+        <li><a href="#">Sign Up</a></li>
+        <li><a href="#">Log In</a></li>
       </ul>
     </nav>
     <h3 class="text-muted">Rails 101</h3>
   </div>
 
   <div class="row">
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </div>
 
   <footer class="footer">
