--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,39 +15,4 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.header,
-.footer {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-top: 10px;
-}
-
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-
-.header h3 {
-  padding-bottom: 19px;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  text-transform: uppercase;
-}
-
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.group {
-  margin-top: 10px;
-}
+@import "custom";
