--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,4 +4,14 @@
   </div>
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
+
+  <table class="table">
+    <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.content %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 </div>
