--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,6 +11,9 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.content %></td>
+        <td>
+          <%= link_to("edit", edit_group_post_path(@group, post), class: "btn btn-sm btn-default") %>
+        </td>
       </tr>
     <% end %>
     </tbody>
