--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <nav>
       <ul class="nav nav-pills pull-right">
         <li><%= link_to("Home", root_path) %></li>
+        <li><%= link_to("Sign Up", new_user_registration_path) %>
       </ul>
     </nav>
     <h3 class="text-muted">Rails 101</h3>
