--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
     <nav>
       <ul class="nav nav-pills pull-right">
         <li><%= link_to("Home", root_path) %></li>
-        <li><%= link_to("Sign Up", new_user_registration_path) %>
+        <% if current_user.blank? %>
+          <li><%= link_to("Sign Up", new_user_registration_path) %></li>
+          <li><%= link_to("Log In", new_user_session_path) %></li>
+        <% else %>
+          <li><%= link_to("Sign Out", destroy_user_session_path, method: :delete) %></li>
+        <% end %>
       </ul>
     </nav>
     <h3 class="text-muted">Rails 101</h3>
