--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,6 +8,7 @@
         <th>No.</th>
         <th>Title</th>
         <th>Description</th>
+        <th>Owner</th>
         <th>Options</th>
       </tr>
     </thead>
@@ -17,6 +18,7 @@
         <td><%= group.id %></td>
         <td><%= link_to(group.title, group_path(group)) %></td>
         <td><%= group.description %></td>
+        <td><%= group.owner.name %></td>
         <td>
           <%= link_to("edit", edit_group_path(group), class: "btn btn-default btn-sm", role: "button") %>
           <%= link_to("delete", group_path(group), class: "btn btn-default btn-sm", method: :delete, data: { confirm: "Are you sure?" }) %>
