--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,8 +20,10 @@
         <td><%= group.description %></td>
         <td><%= group.owner.name %></td>
         <td>
+        <% if current_user && group.editable_by?(current_user) %>
           <%= link_to("edit", edit_group_path(group), class: "btn btn-default btn-sm", role: "button") %>
           <%= link_to("delete", group_path(group), class: "btn btn-default btn-sm", method: :delete, data: { confirm: "Are you sure?" }) %>
+        <% end %>
         </td>
       </tr>
     <% end %>
