--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,19 +1,25 @@
 <div class="col-md-12">
   <div class="group pull-right">
+  <% if current_user && @group.editable_by?(current_user) %>
     <%= link_to("Edit", edit_group_path(@group), class: "btn btn-sm btn-primary") %>
-    <%= link_to("New Post", new_group_post_path(@group), class: "btn btn-sm btn-primary") %>
+  <% end %>
+    <%= link_to("New Post", new_group_post_path(@group), class: "btn btn-sm btn-primary") if current_user %>
   </div>
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
 
   <table class="table">
+    <caption>Comments</caption>
     <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.author.name %></td>
         <td><%= post.content %></td>
         <td>
+        <% if current_user && post.editable_by?(current_user) %>
           <%= link_to("edit", edit_group_post_path(@group, post), class: "btn btn-sm btn-default") %>
           <%= link_to("delete", group_post_path(@group, post), method: :delete, class: "btn btn-sm btn-default") %>
+        <% end %>
         </td>
       </tr>
     <% end %>
