--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,10 +1,15 @@
 <div class="col-md-12">
-  <div class="group pull-right">
-  <% if current_user && @group.editable_by?(current_user) %>
-    <%= link_to("Edit", edit_group_path(@group), class: "btn btn-sm btn-primary") %>
+  <% if current_user %>
+    <div class="group pull-right">
+      <%= link_to("Edit", edit_group_path(@group), class: "btn btn-sm btn-primary") if @group.editable_by?(current_user) %>
+      <% if current_user.is_member_of?(@group) %>
+        <%= link_to("New Post", new_group_post_path(@group), class: "btn btn-sm btn-primary") %>
+        <%= link_to("Quit Group", quit_group_path(@group), method: :post, class: "btn btn-sm") %>
+      <% else %>
+        <%= link_to("Join Group", join_group_path(@group), method: :post, class: "btn btn-sm") %>
+      <% end %>
+    </div>
   <% end %>
-    <%= link_to("New Post", new_group_post_path(@group), class: "btn btn-sm btn-primary") if current_user %>
-  </div>
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
 
