--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= group.id %></td>
         <td><%= group.title %></td>
         <td><%= group.description %></td>
-        <td><%= group.posts.count %></td>
+        <td><%= group.posts.size %></td>
         <td><%= group.updated_at %></td>
       </tr>
     <% end %>
