--- a/app/views/account/posts/index.html.erb
+++ b/app/views/account/posts/index.html.erb
@@ -14,7 +14,7 @@
       <tr>
         <td><%= post.content %></td>
         <td><%= post.group.title %></td>
-        <td><%= post.updated_at %></td>
+        <td><%= post.updated_at.to_s(:long) %></td>
         <td>
         <% if current_user && post.editable_by?(current_user) %>
           <%= link_to("edit", edit_group_post_path(post.group, post), class: "btn btn-sm btn-default") %>
