--- a/app/views/account/posts/index.html.erb
+++ b/app/views/account/posts/index.html.erb
@@ -12,7 +12,7 @@
     <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.content %></td>
+        <td><%= render_post_content(post) %></td>
         <td><%= post.group.title %></td>
         <td><%= post.updated_at.to_s(:long) %></td>
         <td>
