--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -19,7 +19,7 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.author.name %></td>
-        <td><%= post.content %></td>
+        <td><%= render_post_content(post) %></td>
         <td>
         <% if current_user && post.editable_by?(current_user) %>
           <%= link_to("edit", edit_group_post_path(@group, post), class: "btn btn-sm btn-default") %>
