--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,10 +20,10 @@
         <td><%= group.description %></td>
         <td><%= group.owner.name %></td>
         <td>
-        <% if current_user && group.editable_by?(current_user) %>
-          <%= link_to("edit", edit_group_path(group), class: "btn btn-default btn-sm", role: "button") %>
-          <%= link_to("delete", group_path(group), class: "btn btn-default btn-sm", method: :delete, data: { confirm: "Are you sure?" }) %>
-        <% end %>
+          <% if current_user && group.editable_by?(current_user) %>
++           <%= link_to("edit", edit_group_path(group), class: "btn btn-sm btn-default") %>
++           <%= link_to("delete", group_path(group), method: :delete, class: "btn btn-sm btn-default") %>
++         <% end %>
         </td>
       </tr>
     <% end %>
