--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,32 +8,13 @@
 </head>
 <body>
 <div class="container">
-  <div class="header">
-    <nav>
-      <ul class="nav nav-pills pull-right">
-        <li><%= link_to("Home", root_path) %></li>
-        <% if current_user.blank? %>
-          <li><%= link_to("Sign Up", new_user_registration_path) %></li>
-          <li><%= link_to("Log In", new_user_session_path) %></li>
-        <% else %>
-          <li><%= link_to("My Posts", account_posts_path) %></li>
-          <li><%= link_to("My Groups", account_groups_path) %></li>
-          <li><%= link_to("Sign Out", destroy_user_session_path, method: :delete) %></li>
-        <% end %>
-      </ul>
-    </nav>
-    <h3 class="text-muted">Rails 101</h3>
-  </div>
-
+  <%= render "common/menu" %>
   <div class="row">
     <div class="container">
       <%= yield %>
     </div>
   </div>
-
-  <footer class="footer">
-    <p>&copy; Bernie Chiu 2014</p>
-  </footer>
+  <%= render "common/footer" %>
 </div>
 
 </body>
