--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -21,9 +21,9 @@
         <td><%= group.owner.name %></td>
         <td>
           <% if current_user && group.editable_by?(current_user) %>
-+           <%= link_to("edit", edit_group_path(group), class: "btn btn-sm btn-default") %>
-+           <%= link_to("delete", group_path(group), method: :delete, class: "btn btn-sm btn-default") %>
-+         <% end %>
+            <%= link_to("edit", edit_group_path(group), class: "btn btn-sm btn-default") %>
+            <%= link_to("delete", group_path(group), method: :delete, class: "btn btn-sm btn-default") %>
+          <% end %>
         </td>
       </tr>
     <% end %>
